update base relayer to mainnet and sync routes and db schema
